--- a/app/src/main/res/drawable/pink_button.xml
+++ b/app/src/main/res/drawable/pink_button.xml
@@ -11,7 +11,7 @@
         android:left="1dp"
         android:right="1dp">
         <shape android:shape="rectangle">
-            <solid android:color="@color/darkPink" />
+            <solid android:color="@color/colorAccent" />
             <corners android:radius="15dp" />
         </shape>
     </item>
