--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/pink"
-    tools:context=".ui.LoginActivity">
+    tools:context=".ui.registerlogin.LoginActivity">
 
     <ScrollView
         android:layout_width="match_parent"
