--- a/app/src/main/res/layout/activity_new_messages.xml
+++ b/app/src/main/res/layout/activity_new_messages.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.NewMessagesActivity">
+    tools:context=".ui.message.NewMessagesActivity">
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView_newMessage"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
