--- a/app/src/main/res/layout/activity_new_messages_row.xml
+++ b/app/src/main/res/layout/activity_new_messages_row.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_marginTop="10dp"
@@ -11,8 +12,8 @@
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/photoNewMessageActivity"
             android:layout_marginStart="5dp"
-            android:layout_width="80dp"
-            android:layout_height="match_parent"/>
+            android:layout_width="60dp"
+            android:layout_height="60dp"/>
       <TextView
           android:id="@+id/usernameTextViewNewMessageActivity"
           android:layout_marginStart="20dp"
@@ -22,5 +23,15 @@
           android:textSize="16sp"
           android:textStyle="bold"
           android:text="@string/username"/>
+
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@android:color/darker_gray"/>
+    </LinearLayout>
+
 </LinearLayout>
