--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/pink"
-    tools:context=".ui.RegisterActivity">
+    tools:context=".ui.registerlogin.RegisterActivity">
 
     <ScrollView
         android:layout_width="match_parent"
