User Parcelable, Receive/Send Rows
User parcelable created, send and receive rows created

--- a/app/src/main/res/layout/chat_received_row.xml
+++ b/app/src/main/res/layout/chat_received_row.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:paddingBottom="10dp">
+    android:paddingBottom="10dp"
+    android:layout_marginBottom="10dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/circleImageView"
@@ -27,6 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
         android:text="Received Message"
+        android:maxWidth="240dp"
         app:layout_constraintBottom_toBottomOf="@+id/circleImageView"
         app:layout_constraintStart_toEndOf="@+id/circleImageView"
         app:layout_constraintTop_toTopOf="@+id/circleImageView"
