--- a/app/src/main/res/layout/chat_send_row.xml
+++ b/app/src/main/res/layout/chat_send_row.xml
@@ -6,7 +6,8 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingBottom="10dp">
+    android:paddingBottom="10dp"
+    android:layout_marginBottom="10dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
         app:civ_border_width="0.5dp"
@@ -27,6 +28,7 @@
         android:padding="10dp"
         android:layout_marginEnd="15dp"
         android:text="Sent message"
+        android:maxWidth="240dp"
         app:layout_constraintBottom_toBottomOf="@+id/circleImageView2"
         app:layout_constraintEnd_toStartOf="@+id/circleImageView2"
         app:layout_constraintTop_toTopOf="@+id/circleImageView2"
