--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -23,19 +23,19 @@
     android:weightSum="2">
         <EditText
             android:layout_marginStart="5dp"
-            android:id="@+id/messageTextChat"
+            android:id="@+id/enterMessageEditText"
             android:background="@android:color/transparent"
-            android:layout_weight="1.7"
+            android:layout_weight="1.8"
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_marginEnd="5dp"
             android:hint="@string/enter_message" />
         <Button
-            android:id="@+id/sendChatBtn"
+            android:id="@+id/sendMessageBtn"
             android:background="@drawable/ic_send"
             android:textStyle="bold"
             android:textColor="@android:color/white"
-            android:layout_weight="0.3"
+            android:layout_weight="0.2"
             android:layout_width="0dp"
             android:layout_height="match_parent"/>
 </LinearLayout>
