--- a/app/src/main/res/layout/chat_send_row.xml
+++ b/app/src/main/res/layout/chat_send_row.xml
@@ -12,7 +12,7 @@
     <de.hdodenhof.circleimageview.CircleImageView
         app:civ_border_width="0.5dp"
         app:civ_border_color="#3C3B3B"
-        android:id="@+id/circleImageView2"
+        android:id="@+id/imageViewSend"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_marginTop="16dp"
@@ -21,6 +21,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:id="@+id/textViewSend"
         android:background="@drawable/gray_button"
         android:textColor="@android:color/white"
         android:layout_width="wrap_content"
@@ -29,8 +30,8 @@
         android:layout_marginEnd="15dp"
         android:text="Sent message"
         android:maxWidth="240dp"
-        app:layout_constraintBottom_toBottomOf="@+id/circleImageView2"
-        app:layout_constraintEnd_toStartOf="@+id/circleImageView2"
-        app:layout_constraintTop_toTopOf="@+id/circleImageView2"
+        app:layout_constraintBottom_toBottomOf="@+id/imageViewSend"
+        app:layout_constraintEnd_toStartOf="@+id/imageViewSend"
+        app:layout_constraintTop_toTopOf="@+id/imageViewSend"
         app:layout_constraintVertical_bias="0.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
